Added exception handler and swagger. Defined database entities for user, doctor, patient and appointment. Added doctor registration api and other doctor apis. Removed user apis